arc-script/arc-script-test-insta/src/snapshots/dfg@ownership.arc.snap
---
source: arc-script-core/tests/insta/mod.rs
expression: s
input_file: arc-script-core/tests/insta/snapshot-tests/ownership.arc
---
error: Double use of value
  ┌─ /home/klas/Workspace/arc/arc-script/arc-script-core/tests/insta/snapshot-tests/ownership.arc:3:13
  │
3 │     let y = x.0 in
  │             ^^^
4 │     let z = x.0 in
  │             ^^^


